[package]
name = "symengine-sys"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Unofficial Rust wrappers to the C++ library SymEngine, a fast C++ symbolic manipulation library."
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/symengine.rs"
readme = "../README.md"
license = "BSD-3-Clause"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53"
